Added termkey_get_fd() to API

--- a/termkey.h.in
+++ b/termkey.h.in
@@ -137,6 +137,8 @@ termkey_t *termkey_new(int fd, int flags);
 void       termkey_free(termkey_t *tk);
 void       termkey_destroy(termkey_t *tk);
 
+int        termkey_get_fd(termkey_t *tk);
+
 int        termkey_get_flags(termkey_t *tk);
 void       termkey_set_flags(termkey_t *tk, int newflags);
 
