--- a/termkey.h.in
+++ b/termkey.h.in
@@ -174,6 +174,8 @@ typedef enum {
   TERMKEY_FORMAT_CARETCTRL   = 1 << 1, // ^X instead of C-X
   TERMKEY_FORMAT_ALTISMETA   = 1 << 2, // Meta- or M- instead of Alt- or A-
   TERMKEY_FORMAT_WRAPBRACKET = 1 << 3, // Wrap special keys in brackets like <Escape>
+
+  TERMKEY_FORMAT_MOUSE_POS   = 1 << 8, // Include mouse position if relevant; @ col,line
 } TermKeyFormat;
 
 // Some useful combinations
