--- a/termkey.h.in
+++ b/termkey.h.in
@@ -133,11 +133,12 @@ typedef struct {
 typedef struct _TermKey TermKey;
 
 enum {
-  TERMKEY_FLAG_NOINTERPRET = 1 << 0, // Do not interpret C0//G1 codes if possible
+  TERMKEY_FLAG_NOINTERPRET = 1 << 0, // Do not interpret C0//DEL codes if possible
   TERMKEY_FLAG_CONVERTKP   = 1 << 1, // Convert KP codes to regular keypresses
   TERMKEY_FLAG_RAW         = 1 << 2, // Input is raw bytes, not UTF-8
   TERMKEY_FLAG_UTF8        = 1 << 3, // Input is definitely UTF-8
   TERMKEY_FLAG_NOTERMIOS   = 1 << 4, // Do not make initial termios calls on construction
+  TERMKEY_FLAG_SPACESYMBOL = 1 << 5, // Space is symbolic rather than Unicode
 };
 
 void termkey_check_version(int major, int minor);
