--- a/termkey.h.in
+++ b/termkey.h.in
@@ -139,6 +139,7 @@ enum {
   TERMKEY_FLAG_UTF8        = 1 << 3, // Input is definitely UTF-8
   TERMKEY_FLAG_NOTERMIOS   = 1 << 4, // Do not make initial termios calls on construction
   TERMKEY_FLAG_SPACESYMBOL = 1 << 5, // Space is symbolic rather than Unicode
+  TERMKEY_FLAG_CTRLC       = 1 << 6, // Allow Ctrl-C to be read as normal, disabling SIGINT
 };
 
 void termkey_check_version(int major, int minor);
