--- a/termkey.h.in
+++ b/termkey.h.in
@@ -84,33 +84,34 @@ typedef enum {
   TERMKEY_SYM_KPEQUALS,
 
   // et cetera ad nauseum
+  TERMKEY_N_SYMS
 } TermKeySym;
 
 typedef enum {
   TERMKEY_TYPE_UNICODE,
   TERMKEY_TYPE_FUNCTION,
   TERMKEY_TYPE_KEYSYM,
-  TERMKEY_TYPE_MOUSE,
+  TERMKEY_TYPE_MOUSE
 } TermKeyType;
 
 typedef enum {
   TERMKEY_RES_NONE,
   TERMKEY_RES_KEY,
   TERMKEY_RES_EOF,
-  TERMKEY_RES_AGAIN,
+  TERMKEY_RES_AGAIN
 } TermKeyResult;
 
 typedef enum {
   TERMKEY_MOUSE_UNKNOWN,
   TERMKEY_MOUSE_PRESS,
   TERMKEY_MOUSE_DRAG,
-  TERMKEY_MOUSE_RELEASE,
+  TERMKEY_MOUSE_RELEASE
 } TermKeyMouseEvent;
 
 enum {
   TERMKEY_KEYMOD_SHIFT = 1 << 0,
   TERMKEY_KEYMOD_ALT   = 1 << 1,
-  TERMKEY_KEYMOD_CTRL  = 1 << 2,
+  TERMKEY_KEYMOD_CTRL  = 1 << 2
 };
 
 typedef struct {
@@ -139,7 +140,7 @@ enum {
   TERMKEY_FLAG_UTF8        = 1 << 3, // Input is definitely UTF-8
   TERMKEY_FLAG_NOTERMIOS   = 1 << 4, // Do not make initial termios calls on construction
   TERMKEY_FLAG_SPACESYMBOL = 1 << 5, // Space is symbolic rather than Unicode
-  TERMKEY_FLAG_CTRLC       = 1 << 6, // Allow Ctrl-C to be read as normal, disabling SIGINT
+  TERMKEY_FLAG_CTRLC       = 1 << 6  // Allow Ctrl-C to be read as normal, disabling SIGINT
 };
 
 void termkey_check_version(int major, int minor);
@@ -177,7 +178,7 @@ typedef enum {
   TERMKEY_FORMAT_ALTISMETA   = 1 << 2, // Meta- or M- instead of Alt- or A-
   TERMKEY_FORMAT_WRAPBRACKET = 1 << 3, // Wrap special keys in brackets like <Escape>
 
-  TERMKEY_FORMAT_MOUSE_POS   = 1 << 8, // Include mouse position if relevant; @ col,line
+  TERMKEY_FORMAT_MOUSE_POS   = 1 << 8  // Include mouse position if relevant; @ col,line
 } TermKeyFormat;
 
 // Some useful combinations
