--- a/termkey.h.in
+++ b/termkey.h.in
@@ -1,3 +1,7 @@
+#ifdef __cplusplus
+extern "C" {
+#endif
+
 #ifndef GUARD_TERMKEY_H_
 #define GUARD_TERMKEY_H_
 
@@ -196,4 +200,8 @@ typedef TermKeyKey    termkey_key;
 
 typedef TermKey termkey_t;
 
+#endif
+
+#ifdef __cplusplus
+}
 #endif
