--- a/termkey.h.in
+++ b/termkey.h.in
@@ -189,6 +189,9 @@ typedef enum {
 
 #define TERMKEY_FORMAT_VIM (TERMKEY_FORMAT_ALTISMETA|TERMKEY_FORMAT_WRAPBRACKET)
 
+size_t termkey_strfkey(TermKey *tk, char *buffer, size_t len, TermKeyKey *key, TermKeyFormat format);
+
+// Old name for termkey_strfkey()
 size_t termkey_snprint_key(TermKey *tk, char *buffer, size_t len, TermKeyKey *key, TermKeyFormat format);
 
 // Legacy name typedefs
