Put LIBDIR and INCDIR directly in termkey.pc; don't indirect via PREFIX as it might be incorrect

--- a/termkey.pc.in
+++ b/termkey.pc.in
@@ -1,6 +1,5 @@
-prefix=@PREFIX@
-libdir=${prefix}/lib
-includedir=${prefix}/include
+libdir=@LIBDIR@
+includedir=@INCDIR@
 
 Name: termkey
 Description: Abstract terminal key input library
