--- a/termkey.h.in
+++ b/termkey.h.in
@@ -102,7 +102,8 @@ typedef enum {
   TERMKEY_RES_NONE,
   TERMKEY_RES_KEY,
   TERMKEY_RES_EOF,
-  TERMKEY_RES_AGAIN
+  TERMKEY_RES_AGAIN,
+  TERMKEY_RES_ERROR
 } TermKeyResult;
 
 typedef enum {
