--- a/termkey.h.in
+++ b/termkey.h.in
@@ -96,7 +96,10 @@ typedef enum {
   TERMKEY_TYPE_FUNCTION,
   TERMKEY_TYPE_KEYSYM,
   TERMKEY_TYPE_MOUSE,
-  TERMKEY_TYPE_POSITION
+  TERMKEY_TYPE_POSITION,
+  /* add other recognised types here */
+
+  TERMKEY_TYPE_UNKNOWN_CSI = -1
 } TermKeyType;
 
 typedef enum {
@@ -201,6 +204,8 @@ TermKeySym termkey_keyname2sym(TermKey *tk, const char *keyname);
 TermKeyResult termkey_interpret_mouse(TermKey *tk, const TermKeyKey *key, TermKeyMouseEvent *event, int *button, int *line, int *col);
 
 TermKeyResult termkey_interpret_position(TermKey *tk, const TermKeyKey *key, int *line, int *col);
+
+TermKeyResult termkey_interpret_csi(TermKey *tk, const TermKeyKey *key, long args[], size_t *nargs, unsigned long *cmd);
 
 typedef enum {
   TERMKEY_FORMAT_LONGMOD     = 1 << 0, /* Shift-... instead of S-... */
