Make header compatible with C++ (from https://github.com/o11c/libtermkey/commit/ddd7b0c5aa10bb62dc2f7673414e9a00f11ff447) [thanks o11c]

--- a/termkey.h.in
+++ b/termkey.h.in
@@ -224,8 +224,8 @@ typedef enum {
 
 /* Some useful combinations */
 
-#define TERMKEY_FORMAT_VIM (TERMKEY_FORMAT_ALTISMETA|TERMKEY_FORMAT_WRAPBRACKET)
-#define TERMKEY_FORMAT_URWID (TERMKEY_FORMAT_LONGMOD|TERMKEY_FORMAT_ALTISMETA| \
+#define TERMKEY_FORMAT_VIM (TermKeyFormat)(TERMKEY_FORMAT_ALTISMETA|TERMKEY_FORMAT_WRAPBRACKET)
+#define TERMKEY_FORMAT_URWID (TermKeyFormat)(TERMKEY_FORMAT_LONGMOD|TERMKEY_FORMAT_ALTISMETA| \
           TERMKEY_FORMAT_LOWERMOD|TERMKEY_FORMAT_SPACEMOD|TERMKEY_FORMAT_LOWERSPACE)
 
 size_t      termkey_strfkey(TermKey *tk, char *buffer, size_t len, TermKeyKey *key, TermKeyFormat format);
